hard-gists/2338529/run.log
=== Docker Run Log for 2338529 ===
Started at: Mi 29. Okt 13:02:27 CET 2025

[2025-10-29 13:02:27] START: Running container for 2338529
[2025-10-29 13:02:27] SUCCESS: Container 10cdcecde07e41ccf8b2d520a5b03dc85e86e1aa8c028bbbd94aa3665dede202 started for 2338529
=== Container logs for 2338529 ===
  File "/snippet.py", line 191
    print cac.verify(), cac.check_ca()
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2338529 ===
[2025-10-29 13:02:29] INFO: Container 10cdcecde07e41ccf8b2d520a5b03dc85e86e1aa8c028bbbd94aa3665dede202 has stopped
